--- a/SpyPointData/packages.config
+++ b/SpyPointData/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CyotekImageBox" version="1.2.1" targetFramework="net45" />
+  <package id="ExifLib" version="1.7.0.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
 </packages>
