--- a/SpyPointData/packages.config
+++ b/SpyPointData/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CyotekImageBox" version="1.2.1" targetFramework="net45" />
   <package id="ExifLib" version="1.7.0.0" targetFramework="net45" />
+  <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
 </packages>
