Update to new Spypoint API

--- a/SpyPointData/SpyPointData.csproj
+++ b/SpyPointData/SpyPointData.csproj
@@ -191,11 +191,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\..\dev\repos\ObjectListViewFull-2.9.1\ObjectListViewDemo\ObjectListView\ObjectListView2012.csproj">
+    <ProjectReference Include="..\ObjectListViewFull-2.9.1\ObjectListViewDemo\ObjectListView\ObjectListView2012.csproj">
       <Project>{18feda0c-d147-4286-b39a-01204808106a}</Project>
       <Name>ObjectListView2012</Name>
     </ProjectReference>
-    <ProjectReference Include="..\WeatherTracker\WeatherTracker\WeatherTracker.csproj">
+    <ProjectReference Include="..\WeatherTracker\WeatherTracker.csproj">
       <Project>{61ff8123-637d-4f5e-abfc-9f863155b291}</Project>
       <Name>WeatherTracker</Name>
     </ProjectReference>
