--- a/SpyPointSettings/SpyPointSettings.csproj
+++ b/SpyPointSettings/SpyPointSettings.csproj
@@ -101,4 +101,8 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetDir)*.exe $(SolutionDir)Build
+copy $(TargetDir)*.dll $(SolutionDir)Build</PostBuildEvent>
+  </PropertyGroup>
 </Project>
