-Added date filter -Fixed bug in SpyPointSettings parsing date times -Fixed bug in Date Histogram -Catching exception on ImageViewer logic, not fixed

--- a/SpyPointData/SpyPointData.csproj
+++ b/SpyPointData/SpyPointData.csproj
@@ -92,6 +92,12 @@
     </Compile>
     <Compile Include="CameraInfo.cs" />
     <Compile Include="CameraPics.cs" />
+    <Compile Include="DateFilterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DateFilterForm.Designer.cs">
+      <DependentUpon>DateFilterForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DelayOptions.cs" />
     <Compile Include="DumpData.cs" />
     <Compile Include="ImageViewer.cs" />
@@ -152,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CameraDetailsForm.resx">
       <DependentUpon>CameraDetailsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DateFilterForm.resx">
+      <DependentUpon>DateFilterForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InputForm.resx">
       <DependentUpon>InputForm.cs</DependentUpon>
