--- a/SpyPointData/SpyPointData.csproj
+++ b/SpyPointData/SpyPointData.csproj
@@ -100,6 +100,12 @@
     </Compile>
     <Compile Include="DelayOptions.cs" />
     <Compile Include="DumpData.cs" />
+    <Compile Include="FilterLocationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FilterLocationForm.Designer.cs">
+      <DependentUpon>FilterLocationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ImageViewer.cs" />
     <Compile Include="InputForm.cs">
       <SubType>Form</SubType>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DateFilterForm.resx">
       <DependentUpon>DateFilterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FilterLocationForm.resx">
+      <DependentUpon>FilterLocationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InputForm.resx">
       <DependentUpon>InputForm.cs</DependentUpon>
