--- a/SpyPointData/packages.config
+++ b/SpyPointData/packages.config
@@ -5,4 +5,5 @@
   <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.11.17" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
 </packages>
