Added more logging in SpyPointSettings

--- a/SpyPointSettings/NLog.config
+++ b/SpyPointSettings/NLog.config
@@ -3,9 +3,6 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       internalLogFile="c:\log.txt" internalLogLevel="Trace">
   <targets>
-    <target xsi:type="NLogViewer"
-            name="viewer"
-            address="udp://127.0.0.1:9999"/>
     <target name="file" xsi:type="File"
       layout="${longdate} ${logger} ${message}${exception:format=ToString}"
       fileName="log.txt"
@@ -15,6 +12,6 @@
   <rules>
     <logger name="*"
             minlevel="Debug"
-            writeTo="viewer,file" />
+            writeTo="file" />
   </rules>
 </nlog>
