--- a/SpyPointSettings/SpyPointSettings.csproj
+++ b/SpyPointSettings/SpyPointSettings.csproj
@@ -80,7 +80,9 @@
     <EmbeddedResource Include="SpyPointSettingsForm.resx">
       <DependentUpon>SpyPointSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="NLog.config" />
+    <None Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
