Fixed bug with pic table layout showing 4x4 grid with 1 pic

--- a/SpyPointData/SpyPointData.csproj
+++ b/SpyPointData/SpyPointData.csproj
@@ -105,6 +105,12 @@
     </Compile>
     <Compile Include="DelayOptions.cs" />
     <Compile Include="DumpData.cs" />
+    <Compile Include="FilterBuckIDForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FilterBuckIDForm.Designer.cs">
+      <DependentUpon>FilterBuckIDForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FilterLocationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +179,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DateFilterForm.resx">
       <DependentUpon>DateFilterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FilterBuckIDForm.resx">
+      <DependentUpon>FilterBuckIDForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FilterLocationForm.resx">
       <DependentUpon>FilterLocationForm.cs</DependentUpon>
