Added configurable delay and multishot settings in SpyPointSettings

--- a/SpyPointSettings/SpyPointSettings.csproj
+++ b/SpyPointSettings/SpyPointSettings.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="DelayOptions.cs" />
     <Compile Include="MutiShotOptions.cs" />
+    <Compile Include="SPSSettings.cs" />
     <Compile Include="SpyPointSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
