Made updates for flex and lm2 SpyPointSettings

--- a/SpyPointData/SpyPointData.csproj
+++ b/SpyPointData/SpyPointData.csproj
@@ -167,6 +167,7 @@
     </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="SPConnection.cs" />
+    <Compile Include="SPSSettings.cs" />
     <EmbeddedResource Include="EditLogin.resx">
       <DependentUpon>EditLogin.cs</DependentUpon>
     </EmbeddedResource>
